# phosphorus

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md
cmake/: CMakeUtilities.cmake  FindFFmpeg.cmake  FindGLFW3.cmake  FindNlohmann_JSON.cmake
examples/: AnimateExp.cpp  CMakeLists.txt  GnuplotExp.cpp  Morph.cpp  SpringSystem.cpp  SpringSystem.py  SpringSystemWithPlot.cpp  Task1.cpp  Task2-1.cpp  Task2-2.cpp  Task3.cpp
include/: Dynamics.hpp  Field.hpp  Vector.hpp
include/phosphorus/: Animate.h  Coordinate.h  Field.h  Gnuplot.h  Particle.h  ScitificConstants.h  SignalSlot.h  TypeTraits.h  Vector.h  VerletIntegrator.h  phosphorus.h
src/: Animate.cpp  CMakeLists.txt  Gnuplot.cpp  main.cpp
src/LexerParser/: phosphorus.lex  phosphorus.yacc
src/interpreter/: main.cpp
src/test/: jsontest.cpp  test1.cpp  test2.cpp
src/ui/: pyplotShow.py  turtleShow.py
test/: CMakeLists.txt  FieldTest.cpp  TestHelper.h  VerletIntegratorTest.cpp  test.json
